plugins {
    id 'java'
    id 'java-library'
    id 'se.patrikerdes.use-latest-versions'
    id 'com.github.ben-manes.versions'
    id 'org.liquibase.gradle' version '2.0.3'

}


apply plugin: 'java'
apply plugin: 'java-library'


apply plugin: 'idea'

compileJava {
    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview"]

}
test {
    jvmArgs '--enable-preview'
}

compileJava.options.encoding = 'UTF-8'
sourceCompatibility = 15
targetCompatibility = 15
group 'ish'
version '1.0'
update.dependsOn processResources
//classes.dependsOn update


repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    api group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
    api group: 'org.apache.commons', name: 'commons-text', version: '1.9'
    api group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.1'
    api 'org.jetbrains:annotations:20.1.0'
    api 'com.neovisionaries:nv-i18n:1.27'
    api 'org.beryx:awt-color-factory:1.0.2'
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
    api group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'


    liquibaseRuntime 'org.liquibase:liquibase-core:3.8.1'
    liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:2.1.1'
    liquibaseRuntime group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
    liquibaseRuntime group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
// https://mvnrepository.com/artifact/org.yaml/snakeyaml
    liquibaseRuntime group: 'org.yaml', name: 'snakeyaml', version: '1.27'
    liquibaseRuntime files('build/classes/java/main')
    liquibaseRuntime files('build/resources/db')
}
liquibase {

    activities {

        main {

            classpath "$projectDir"
            Properties properties = new Properties()
            properties.load(project.rootProject.file('model/src/main/resources/datasource.properties').newDataInputStream())
            changeLogFile "src/main/resources/db/changelog.yaml"
            url properties['jdbcUrl']
            username properties['username']
            password properties['password']

        }

    }
}
